openshift/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-demo
  labels:
    app: microservice-demo
    component: api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: microservice-demo
