openshift/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: microservice-demo
  labels:
    app: microservice-demo
    component: api
  annotations:
    haproxy.router.openshift.io/timeout: "30s"
    haproxy.router.openshift.io/balance: "roundrobin"
    haproxy.router.openshift.io/disable_cookies: "true"
spec:
  to:
    kind: Service
    name: microservice-demo
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
